--- a/ui/bird.css
+++ b/ui/bird.css
@@ -184,7 +184,7 @@ body {
   padding: 0;
   margin: 0;
   color: rgba(255, 255, 255, 0.9);
-  font-family: helvetica, arial, 微软雅黑;
+  font-family: helvetica, arial, 微软雅黑, serif;
   font-size: 16px;
   line-height: 1.5em; }
   body a {
@@ -230,7 +230,7 @@ body .bird {
   position: absolute;
   width: 43px;
   height: 30px;
-  background-image: url(images/nyancat.png);
+  background-image: url(images/bird.png);
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: 0 -35px;
