--- a/ui/bird.scss
+++ b/ui/bird.scss
@@ -51,7 +51,7 @@ body {
   background-color:#222;
   padding:0;margin:0;
   color:rgba(white, 0.9);
-  font-family:helvetica, arial, 微软雅黑;
+  font-family:helvetica, arial, 微软雅黑, serif;
   font-size:16px;
   line-height:1.5em;
 
