--- a/ui/document.scss
+++ b/ui/document.scss
@@ -35,4 +35,10 @@ body {
     top: 312px;
     left: 46%;
   }
+  .top10 {
+    position: absolute;
+    width: auto;
+    top: 99px;
+    left: 70%;
+  }
 }
