--- a/ui/document.css
+++ b/ui/document.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
+  font-size: 62.5%;
+}
 body .ct-p1 {
   position: absolute;
   width: 300px;
