--- a/ui/document.scss
+++ b/ui/document.scss
@@ -1,4 +1,6 @@
 body {
+  font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
+  font-size: 62.5%;
   .ct-p1 {
     // background-color:white;
     position:absolute;
